--- a/app/src/main/res/menu/menu_user_info.xml
+++ b/app/src/main/res/menu/menu_user_info.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="99"
-        android:icon="@mipmap/ic_action_reload"
+        android:icon="@drawable/ic_action_reload"
         android:title="@string/action_refresh"
         app:showAsAction="always" />
 </menu>
