bugfix: open the wrong Readme.md

--- a/app/src/main/res/menu/menu_trending.xml
+++ b/app/src/main/res/menu/menu_trending.xml
@@ -4,6 +4,12 @@
     tools:context="com.quinn.githubknife.ui.activity.SearchActivity">
 
     <item
+        android:id="@+id/action_time"
+        android:icon="@drawable/time"
+        app:showAsAction="always"
+        android:title="Setting"/>
+
+    <item
         android:id="@+id/action_set"
         android:icon="@drawable/sort"
         app:showAsAction="always"
